# easyweb

./: Cargo.toml  README.md
front-ui/: README.md  package-lock.json  package.json
front-ui/src/: App.vue
front-ui/src/components/: FileBrowser.vue
src/: main.rs
