[package]
name = "easyweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
actix-cors = "0.6.5"
actix-multipart = "0.6.1"
